SHR-346 Handle quoted params tokens with spaces.
* Handle unexpected exceptions and make SeahorseSparkLauncher truly
  functional. For example setConf might have blow up with
  'conf must start with spark' error if `--conf not-spark.memory 5g` was passed

Change-Id: I9b22ef7490fb5c2608382b1fab68dc1cc3fe16fe